src/Promotions/BFCM/resources/css/bfcm2025.scss
.givewp-bfcm-2025-banner {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    background-image: var(--bg-small);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 186px;
    width: 100%;
    margin-bottom: .5rem;

    @media (min-width: 768px) {
        background-image: var(--bg-medium);
        height: 220px;
    }

    @media (min-width: 1024px) {
        background-image: var(--bg-large);
        height: 210px;
    }

    &__content {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: center;
        gap: .5rem;
        position: relative;
        z-index: 2;
        padding: 2rem 1rem;
        margin-left: 5rem;
    }

    &__title {
        font-family: Montserrat;
        font-weight: 700;
        font-size: 1.5rem;
        line-height: 1.25;
        color: #022603;
        margin: 0;
        padding: 0;

        @media (min-width: 768px) {
            font-size: 1.75rem;
            line-height: 1.125;
        }

        @media (min-width: 1024px) {
            font-size: 2rem;
            line-height: 1.1;
        }
    }

    &__discount {
        font-weight: 500;
        font-size: 1.25rem;
        font-weight: 500;
        line-height: 1.3;
        color: #459948;

        @media (min-width: 768px) {
            font-size: 1.75rem;
            line-height: 1.4;
        }

        @media (min-width: 1024px) {
            font-size: 2rem;
            font-weight: 700;
            line-height: 1.5;
        }
    }

    &__description {
        font-family: Inter;
        font-weight: 500;
        font-size: 0.875rem;
        line-height: 1.4;
        color: #022603;
        margin: 0;
        padding: 0;

        @media (min-width: 768px) {
            font-size: 1.125rem;
            line-height: 1.5;
        }

        @media (min-width: 1024px) {
            font-size: 1.25rem;
        }
    }

    &__cta {
        font-family: Montserrat;
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 8px;
        padding: 12px 24px;
        font-weight: 700;
        font-size: 0.875rem;
        line-height: 1;
        border-radius: 36px;
        margin-top: .5rem;
        background: #F29718;
        color: #fff;
        text-decoration: none;
        cursor: pointer;
        transition: all 0.3s ease;
        border: none;

        @media (min-width: 768px) {
            font-size: 1rem;
        }

        img {
            width: 20px;
            height: 20px;
            flex-shrink: 0;
        }

        &:hover {
            background: #D98715;
            color: #fff;
        }
    }
}

